--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "4     4.3  Fast Food, Sandwich, Pizza, Burger, Wraps, Rol...            100  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "(657, 5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "Index(['links', 'names', 'ratings', 'cuisine', 'price for one'], dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "4  Fast Food, Sandwich, Pizza, Burger, Wraps, Rol...            100  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "(657, 4)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,6 +330,319 @@
    "source": [
     "df.drop_duplicates(inplace = True)\n",
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>names</th>\n",
+       "      <th>ratings</th>\n",
+       "      <th>cuisine</th>\n",
+       "      <th>price for one</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sahara Bakers</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>Chinese, Bakery, Sichuan, Pizza, Burger</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KFC</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>Burger, Fast Food, Biryani, Desserts, Beverages</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           names ratings                                          cuisine  \\\n",
+       "0  Sahara Bakers     3.7          Chinese, Bakery, Sichuan, Pizza, Burger   \n",
+       "1            KFC     3.9  Burger, Fast Food, Biryani, Desserts, Beverages   \n",
+       "\n",
+       "   price for one  \n",
+       "0            100  \n",
+       "1            100  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cleaning Rate Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['3.7', '3.9', '4.1', '4.3', '4', '4.2', '4.4', '4.5', '3.8', '4.6',\n",
+       "       '3.6', 'New', '3.4', '3.5', '3.1', '3.3', '2.7', '3.2', '-', '3',\n",
+       "       '4.7', '2.8', '2.9', '2.6'], dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ratings'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3.7\n",
+       "1    3.9\n",
+       "2    4.1\n",
+       "3    3.9\n",
+       "4    4.3\n",
+       "Name: ratings, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def handlerate(value):\n",
+    "    if(value=='New' or value=='-'):\n",
+    "        return np.nan\n",
+    "    else:\n",
+    "        value = str(value).split('/')\n",
+    "        value = value[0]\n",
+    "        return float(value)\n",
+    "    \n",
+    "df['ratings'] = df['ratings'].apply(handlerate)\n",
+    "df['ratings'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filling Null Values in Rate Column with Mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ratings'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ratings'].fillna(df['ratings'].mean(), inplace = True)\n",
+    "df['ratings'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 657 entries, 0 to 656\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   names          657 non-null    object \n",
+      " 1   ratings        657 non-null    float64\n",
+      " 2   cuisine        657 non-null    object \n",
+      " 3   price for one  657 non-null    int64  \n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 25.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dropping Null Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>names</th>\n",
+       "      <th>ratings</th>\n",
+       "      <th>cuisine</th>\n",
+       "      <th>price for one</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sahara Bakers</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>Chinese, Bakery, Sichuan, Pizza, Burger</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KFC</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>Burger, Fast Food, Biryani, Desserts, Beverages</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Subbaiah Gari Hotel</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>South Indian, Andhra, Mithai</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Paradise Biryani</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>Biryani, Kebab, Desserts, Beverages</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pista House Bakery</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>Fast Food, Sandwich, Pizza, Burger, Wraps, Rol...</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 names  ratings  \\\n",
+       "0        Sahara Bakers      3.7   \n",
+       "1                  KFC      3.9   \n",
+       "2  Subbaiah Gari Hotel      4.1   \n",
+       "3     Paradise Biryani      3.9   \n",
+       "4   Pista House Bakery      4.3   \n",
+       "\n",
+       "                                             cuisine  price for one  \n",
+       "0            Chinese, Bakery, Sichuan, Pizza, Burger            100  \n",
+       "1    Burger, Fast Food, Biryani, Desserts, Beverages            100  \n",
+       "2                       South Indian, Andhra, Mithai            100  \n",
+       "3                Biryani, Kebab, Desserts, Beverages            100  \n",
+       "4  Fast Food, Sandwich, Pizza, Burger, Wraps, Rol...            100  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(inplace = True)\n",
+    "df.head()"
    ]
   },
   {
